change of structure - add anoter stage - deployment for web app- correct -01

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -94,7 +94,7 @@ stages:
           name: "Web Api"
           job: "JobDeployInfrastructureWebApp"
           path: "webApp"
-          dependencies: [JobDeployInfraUserManagedIdentity]
+          dependencies: []
           paramOverride: >-
             -branch "main"
             -repoUrl "https://github.com/Mouhsine-inetum/Food-delivery-server-alternate.git"
