--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -39,7 +39,7 @@ stages:
 
   - template: "./templates/stages/stage-deploy-infra.yml@self"
     parameters:
-      stage: StageProvisionInfrastructure
+      stage: StageProvisionInfrastructure_storages
       dependsOn:
         - StageProvisionRG
       condition: "succeeded()"
@@ -72,18 +72,39 @@ stages:
           dependencies: [JobDeployInfraUserManagedIdentity]
           paramOverride: >-
 
-        - webApp: "webApp"
-          id: "webApp"
-          name: "Web Api"
-          job: "JobDeployInfrastructureWebApp"
-          path: "webApp"
-          dependencies: [JobDeployInfraUserManagedIdentity]
-          paramOverride: >-
-            -branch "main"
-            -repoUrl "https://github.com/Mouhsine-inetum/Food-delivery-server-alternate.git"
-            -skuApiServiceName "B1"
-            -skuApiServiceCapacity 3
 
+
+
+  - template: "./templates/stages/stage-deploy-infra.yml@self"
+    parameters:
+      stage: StageProvisionInfrastructure_web
+      dependsOn:
+        - StageProvisionInfrastructure_storages
+      condition: "succeeded()"
+      serviceConnection: "${{ parameters.serviceConnection }}"
+      rgName: "$(rgName)"
+      infraPath: "infrastructure"
+      location: "$(location)"
+      owner: "$(owner)"
+      costCenter: "$(costCenter)"
+      application: "$(application)"
+      desc: "$(desc)"
+      repo: "$(repo)"
+      version: "$(version)"
+      partName: "$(partName)"
+      resourceBase: "$(appShort)"
+      resources:
+          - webApp: "webApp"
+            id: "webApp"
+            name: "Web Api"
+            job: "JobDeployInfrastructureWebApp"
+            path: "webApp"
+            dependencies: []
+            paramOverride: >-
+              -branch "main"
+              -repoUrl "https://github.com/Mouhsine-inetum/Food-delivery-server-alternate.git"
+              -skuApiServiceName "B1"
+              -skuApiServiceCapacity 3
 
   # - template: "./templates/stages/stage-deploy-infra.yml@self"
   #   parameters:
