edit pipeline - add stage - add configuration - correct -02

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -60,9 +60,9 @@ stages:
           id: "UserManagedIdentity"
           name: "User Managed Identity"
           job: "JobDeployInfrastructureManagedId"
-          path: "ManagedId"
+          path: "managedId"
           dependencies: []
-          paramOverride: >-
+          paramOverride: ""
 
         - kv: "keyVault"
           id: "KeyVault"
