--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -110,10 +110,10 @@ stages:
             path: "appConfig"
             dependencies: [JobDeployInfra_WebApp]
             paramOverride: >- 
-              -apiConf [{
+              -apiConf "[{
                           name: 'ClientSettings__ClientDomain'
                           value: 'https://localhost:44373'
-                        }]
+                        }]"
 
   # - template: "./templates/stages/stage-deploy-infra.yml@self"
   #   parameters:
