edit pipeline - add stage - add configuration - correct -06

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -22,11 +22,6 @@ variables:
     value: "rg-$(companyShort)-$(domainShort)-$(appShort)-$(locationAbbr)-${{ parameters.environment }}-$(version)"
   - name: partName
     value: "$(companyShort)-$(domainShort)-$(appShort)-$(locationAbbr)-${{ parameters.environment }}-$(version)"
-  - name: configsForWebApi
-    value: [{
-            name: 'ClientSettings__ClientDomain',
-            value: 'https://localhost:44373'
-            }]
 
 stages:
   - template: "./templates/stages/stage-deploy-rg.yml@self"
@@ -115,7 +110,10 @@ stages:
             path: "appConfig"
             dependencies: [JobDeployInfra_WebApp]
             paramOverride: >- 
-              -apiConf "$(configsForWebApi)"
+              -apiConf ["{
+                          name: 'ClientSettings__ClientDomain'
+                          value: 'https://localhost:44373'
+                        }"]
 
   # - template: "./templates/stages/stage-deploy-infra.yml@self"
   #   parameters:
