--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -22,6 +22,11 @@ variables:
     value: "rg-$(companyShort)-$(domainShort)-$(appShort)-$(locationAbbr)-${{ parameters.environment }}-$(version)"
   - name: partName
     value: "$(companyShort)-$(domainShort)-$(appShort)-$(locationAbbr)-${{ parameters.environment }}-$(version)"
+  - name: confSet
+    value: {
+      name: "ClientSettings__ClientDomain",
+      value: "https://localhost:44373"
+        }
 
 stages:
   - template: "./templates/stages/stage-deploy-rg.yml@self"
@@ -110,10 +115,7 @@ stages:
             path: "appConfig"
             dependencies: [JobDeployInfra_WebApp]
             paramOverride: >- 
-              -apiConf ["{
-                          name: 'ClientSettings__ClientDomain'
-                          value: 'https://localhost:44373'
-                        }"]
+              -apiConf [$(confSet)]
 
   # - template: "./templates/stages/stage-deploy-infra.yml@self"
   #   parameters:
