--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -115,7 +115,7 @@ stages:
             path: "appConfig"
             dependencies: [JobDeployInfra_WebApp]
             paramOverride: >- 
-              -apiConf [$(confSet)]
+              -apiConf ["$(confSet)"]
 
   # - template: "./templates/stages/stage-deploy-infra.yml@self"
   #   parameters:
