edit pipeline - add stage - add configuration - correct -08

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -23,10 +23,9 @@ variables:
   - name: partName
     value: "$(companyShort)-$(domainShort)-$(appShort)-$(locationAbbr)-${{ parameters.environment }}-$(version)"
   - name: confSet
-    value: {
-      name: "ClientSettings__ClientDomain",
-      value: "https://localhost:44373"
-        }
+    value: 
+      - name: "test"
+        value: "value"
 
 stages:
   - template: "./templates/stages/stage-deploy-rg.yml@self"
