--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -111,111 +111,111 @@ stages:
             dependencies: [JobDeployInfra_WebApp]
             paramOverride: '-apiConf [{"name": "ClientSettings__ClientDomain", "value": "https://example.com"}]'
 
-  # - template: "./templates/stages/stage-deploy-infra.yml@self"
-  #   parameters:
-  #     stage: StageProvisionInfrastructure_SqlServerDb
-  #     dependsOn:
-  #       - StageProvisionInfrastructure_storages
-  #     condition: "succeeded()"
-  #     serviceConnection: "${{ parameters.serviceConnection }}"
-  #     rgName: "$(rgName)"
-  #     infraPath: "infrastructure"
-  #     location: "$(location)"
-  #     owner: "$(owner)"
-  #     costCenter: "$(costCenter)"
-  #     application: "$(application)"
-  #     desc: "$(desc)"
-  #     repo: "$(repo)"
-  #     version: "$(version)"
-  #     partName: "$(partName)"
-  #     resourceBase: "sql server and db"
-  #     resources:
-  #         - webApp: "sql"
-  #           id: "SqlServerDb"
-  #           name: "sql server & db"
-  #           path: "sqlDb"
-  #           dependencies: []
-  #           paramOverride: >-
-  #             -sqlAdminLogin "adminUser"
-  #             -kvName "kvfoodeliverywesteurope"
-  #             -rgKvName "cloud-shell-storage-westeurope"
+  - template: "./templates/stages/stage-deploy-infra.yml@self"
+    parameters:
+      stage: StageProvisionInfrastructure_SqlServerDb
+      dependsOn:
+        - StageProvisionInfrastructure_storages
+      condition: "succeeded()"
+      serviceConnection: "${{ parameters.serviceConnection }}"
+      rgName: "$(rgName)"
+      infraPath: "infrastructure"
+      location: "$(location)"
+      owner: "$(owner)"
+      costCenter: "$(costCenter)"
+      application: "$(application)"
+      desc: "$(desc)"
+      repo: "$(repo)"
+      version: "$(version)"
+      partName: "$(partName)"
+      resourceBase: "sql server and db"
+      resources:
+          - webApp: "sql"
+            id: "SqlServerDb"
+            name: "sql server & db"
+            path: "sqlDb"
+            dependencies: []
+            paramOverride: >-
+              -sqlAdminLogin "adminUser"
+              -kvName "kvfoodeliverywesteurope"
+              -rgKvName "cloud-shell-storage-westeurope"
 
-  # - template: "./templates/stages/stage-deploy-infra.yml@self"
-  #   parameters:
-  #     stage: StageProvisionInfrastructure_ServiceBus
-  #     dependsOn:
-  #       - StageProvisionInfrastructure_SqlServerDb
-  #     condition: "succeeded()"
-  #     serviceConnection: "${{ parameters.serviceConnection }}"
-  #     rgName: "$(rgName)"
-  #     infraPath: "infrastructure"
-  #     location: "$(location)"
-  #     owner: "$(owner)"
-  #     costCenter: "$(costCenter)"
-  #     application: "$(application)"
-  #     desc: "$(desc)"
-  #     repo: "$(repo)"
-  #     version: "$(version)"
-  #     partName: "$(partName)"
-  #     resourceBase: "service bus namespace and topic"
-  #     resources:
-  #         - webApp: "sb"
-  #           id: "sbTopics"
-  #           name: "serviceBus and topics"
-  #           path: "sbTop"
-  #           dependencies: []
-  #           paramOverride: ""
+  - template: "./templates/stages/stage-deploy-infra.yml@self"
+    parameters:
+      stage: StageProvisionInfrastructure_ServiceBus
+      dependsOn:
+        - StageProvisionInfrastructure_SqlServerDb
+      condition: "succeeded()"
+      serviceConnection: "${{ parameters.serviceConnection }}"
+      rgName: "$(rgName)"
+      infraPath: "infrastructure"
+      location: "$(location)"
+      owner: "$(owner)"
+      costCenter: "$(costCenter)"
+      application: "$(application)"
+      desc: "$(desc)"
+      repo: "$(repo)"
+      version: "$(version)"
+      partName: "$(partName)"
+      resourceBase: "service bus namespace and topic"
+      resources:
+          - webApp: "sb"
+            id: "sbTopics"
+            name: "serviceBus and topics"
+            path: "sbTop"
+            dependencies: []
+            paramOverride: ""
 
-  # - template: "./templates/stages/stage-deploy-infra.yml@self"
-  #   parameters:
-  #     stage: StageProvisionInfrastructure_AppInsight
-  #     dependsOn:
-  #       - StageProvisionInfrastructure_ServiceBus
-  #     condition: "succeeded()"
-  #     serviceConnection: "${{ parameters.serviceConnection }}"
-  #     rgName: "$(rgName)"
-  #     infraPath: "infrastructure"
-  #     location: "$(location)"
-  #     owner: "$(owner)"
-  #     costCenter: "$(costCenter)"
-  #     application: "$(application)"
-  #     desc: "$(desc)"
-  #     repo: "$(repo)"
-  #     version: "$(version)"
-  #     partName: "$(partName)"
-  #     resourceBase: "service bus namespace and topic"
-  #     resources:
-  #         - webApp: "AppInsight"
-  #           id: "AppInisght"
-  #           name: "App Inisght and log space"
-  #           path: "appInsight"
-  #           dependencies: []
-  #           paramOverride: ""
+  - template: "./templates/stages/stage-deploy-infra.yml@self"
+    parameters:
+      stage: StageProvisionInfrastructure_AppInsight
+      dependsOn:
+        - StageProvisionInfrastructure_ServiceBus
+      condition: "succeeded()"
+      serviceConnection: "${{ parameters.serviceConnection }}"
+      rgName: "$(rgName)"
+      infraPath: "infrastructure"
+      location: "$(location)"
+      owner: "$(owner)"
+      costCenter: "$(costCenter)"
+      application: "$(application)"
+      desc: "$(desc)"
+      repo: "$(repo)"
+      version: "$(version)"
+      partName: "$(partName)"
+      resourceBase: "service bus namespace and topic"
+      resources:
+          - webApp: "AppInsight"
+            id: "AppInisght"
+            name: "App Inisght and log space"
+            path: "appInsight"
+            dependencies: []
+            paramOverride: ""
   
-  # - template: "./templates/stages/stage-deploy-infra.yml@self"
-  #   parameters:
-  #     stage: StageProvisionInfrastructure_funcApp
-  #     dependsOn:
-  #       - StageProvisionInfrastructure_AppInsight
-  #     condition: "succeeded()"
-  #     serviceConnection: "${{ parameters.serviceConnection }}"
-  #     rgName: "$(rgName)"
-  #     infraPath: "infrastructure"
-  #     location: "$(location)"
-  #     owner: "$(owner)"
-  #     costCenter: "$(costCenter)"
-  #     application: "$(application)"
-  #     desc: "$(desc)"
-  #     repo: "$(repo)"
-  #     version: "$(version)"
-  #     partName: "$(partName)"
-  #     resourceBase: "function app integration"
-  #     resources:
-  #         - webApp: "funcApp"
-  #           id: "funcApp"
-  #           name: "function app integration"
-  #           path: "funcApp"
-  #           dependencies: []
-  #           paramOverride: >-
-  #             -containerName "products"
+  - template: "./templates/stages/stage-deploy-infra.yml@self"
+    parameters:
+      stage: StageProvisionInfrastructure_funcApp
+      dependsOn:
+        - StageProvisionInfrastructure_AppInsight
+      condition: "succeeded()"
+      serviceConnection: "${{ parameters.serviceConnection }}"
+      rgName: "$(rgName)"
+      infraPath: "infrastructure"
+      location: "$(location)"
+      owner: "$(owner)"
+      costCenter: "$(costCenter)"
+      application: "$(application)"
+      desc: "$(desc)"
+      repo: "$(repo)"
+      version: "$(version)"
+      partName: "$(partName)"
+      resourceBase: "function app integration"
+      resources:
+          - webApp: "funcApp"
+            id: "funcApp"
+            name: "function app integration"
+            path: "funcApp"
+            dependencies: []
+            paramOverride: >-
+              -containerName "products"
 
